bla/myserver.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: server
  labels:
    app: training
spec:
  containers:
    - name: my-server
      image: innoq/k8s-training-webserver
      livenessProbe:
        httpGet:
            path: /
            port: 80
        periodSeconds: 1
