bla/headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: wwwheadless
spec:
  clusterIP: "None"
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: nginx
