bla/myservice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: www
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: nginx
