bla/myserviceEP.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wwwep
spec:
  ports:
    - port: 80
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: wwwep
subsets:
  - addresses:
      - ip: 193.99.144.80
    ports:
      - port: 80
