bla/myserviceNP.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wwwnp
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      nodePort: 31234
  selector:
    app: nginx
